# INT3505E_02_demo

./: pyproject.toml
Week10/: swagger.yaml
Week10/app/: __init__.py  extensions.py  models.py
Week10/app/books/: routes.py
Week11/: client.py  main.py  requirement.txt  swagger.yaml
Week11/app/: __init__.py  models.py
Week11/app/auth/: routes.py
Week11/app/books/: routes.py
Week11/app/core/: events.py  repositories.py  services.py
Week11/instance/: library.db
Week2/: book_v1.py  book_v2.py  book_v3.py  book_v4.py  library_management.py
Week3/: efficient.py  inefficient.py  pyproject.toml
Week3/Flask-Library-Demo/: lib.http  main.py
Week4/: index.html  openapi.yaml
Week5/: config.py  exceptions.py  library.db  main.py  models.py  router.py  schemas.py  utils.py
Week5/static/: openapi.yaml
Week6/: config.py  exceptions.py  library.db  main.py  models.py  router.py  schemas.py  utils.py
Week6/static/: openapi.yaml
Week7/: swagger.yaml
Week7/Homework/: config.py  exceptions.py  main.py  models.py  router.py  schemas.py  utils.py
Week7/Homework/static/: index.html  openapi.yaml
Week7/generated-server/: setup.py
Week7/generated-server/swagger_server/: __main__.py
Week7/generated-server/swagger_server/controllers/: default_controller.py
Week7/generated-server/swagger_server/models/: book.py
Week7/generated-server/swagger_server/swagger/: swagger.yaml
Week8/: main.py
Week8/instance/: app.db
Week9/: app.py  app_v2.py  deprecation.md  main.py  swagger.yaml  swagger_ui.py
(+1 files in other folders)
