[project]
name = "int3505e-02-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-swagger-ui>=5.21.0",
    "psycopg2-binary>=2.9.11",
]
